Feat: 주문.배송 기능 구현 #337 주문배송 정보 데이터 불러오기 DB작업 같은 날짜에 주문한 상품 묶기위해 리사이클러뷰 멀티뷰 적용 채팅, 배송조회 데이터 전송 멀티뷰 적용으로 item_order_date UI 생성 데이터 로딩 shimmer 적용 주문상품 없을때 UI 처리 model 변경으로 파일 삭제

--- a/agijagi/app/src/main/res/layout/fragment_order.xml
+++ b/agijagi/app/src/main/res/layout/fragment_order.xml
@@ -16,13 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="주문/배송 조회" />
 
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-    <!--        android:id="@+id/bottomNavigationView_order_bottomView"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <TextView
+        android:id="@+id/textView_order_nullData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="주문한 상품이 없습니다"
+        android:textSize="16sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_order" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_order"
@@ -32,5 +36,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_order" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_order_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_order">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/item_order_shimmer" />
+
+            <include layout="@layout/item_order_shimmer" />
+
+            <include layout="@layout/item_order_shimmer" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
